--- a/MigrationGuide.mediawiki
+++ b/MigrationGuide.mediawiki
@@ -13,7 +13,7 @@ This page describes what changed from SDL 1.2 to SDL 1.3, the new features, and 
 
 The best place for information are:
 * this wiki :)
-* the tests included in SDL, in the ```test/``` directory ([http://hg.libsdl.org/SDL/file/tip/test browse online])
+* the tests included in SDL, in the ```test/``` directory ([http://hg.libsdl.org/SDL/file/default/test browse online])
 * the SDL [http://lists.libsdl.org/listinfo.cgi/sdl-libsdl.org mailing list]
 
 == Video ==
