--- a/CategoryAtomic.mediawiki
+++ b/CategoryAtomic.mediawiki
@@ -15,7 +15,7 @@ This category contains functions for handling atomic operations.
 /!\ IMPORTANT:
 : If you are not an expert in concurrent lockless programming, you should only be using the atomic lock and reference counting functions in this file.  In all other cases you should be protecting your data structures with full mutexes.  ''Seriously, here be dragons!''
 
-The list of "safe" functions to use are:
+"Safe" functions to use are:
 * [[SDL_AtomicLock]]()
 * [[SDL_AtomicUnlock]]()
 * [[SDL_AtomicIncRef]]()
