--- a/SDL_CreateCond.mediawiki
+++ b/SDL_CreateCond.mediawiki
@@ -31,7 +31,27 @@ SDL_DestroyCond(cond);
 <<Color2(green,Should this example be Included on the SDL_DestroyCond page?)>>
 
 == Remarks ==
-''You can add useful comments here''
+Typical use of condition variables:
+ ```
+Thread A:
+    SDL_LockMutex(lock);
+    while ( ! condition ) {
+        SDL_CondWait(cond, lock);
+    }
+    SDL_UnlockMutex(lock);
+
+Thread B:
+    SDL_LockMutex(lock);
+    ...
+    condition = true;
+    ...
+    SDL_CondSignal(cond);
+    SDL_UnlockMutex(lock);
+```
+There is some discussion whether to signal the condition variable with the mutex locked or not.  There is some potential performance benefit to unlocking first on some platforms, but there are some potential race conditions depending on how your code is structured.
+
+In general it's safer to signal the condition variable while the mutex is locked.
+
 
 <<Color2(green,Since this has no params does it actually ''create'' the structure or does it just assign an existing structure to a thread?)>>
 
