--- a/CategoryForceFeedback.mediawiki
+++ b/CategoryForceFeedback.mediawiki
@@ -72,6 +72,7 @@ int test_haptic( SDL_Joystick * joystick ) {
  return 0; // Success
 }
 ```
+You can find more information in this blog by Edgar Simo Serra: [http://bobbens.dyndns.org/journal/2010/sdl_haptic/ SDL Haptic In Depth]
 
 == Structures ==
 <<FullSearch(category:CategoryStruct CategoryForceFeedback)>>
