update content - 2/14 changeset 5295 (as of 5145); moved to render.h

--- a/SDL_TextureAccess.mediawiki
+++ b/SDL_TextureAccess.mediawiki
@@ -30,4 +30,4 @@ You can add your code example here
 :[[SDL_QueryTexturePixels]]
 
 ----
-[[CategoryEnum]], [[CategoryVideo]]
+[[CategoryEnum]], [[CategoryRenderer]]
