--- a/SDL_TextureModulate.mediawiki
+++ b/SDL_TextureModulate.mediawiki
@@ -32,4 +32,4 @@ You can add your code example here
 :[[SDL_RenderCopy]]
 
 ----
-[[CategoryEnum]], [[CategoryVideo]]
+[[CategoryEnum]], [[CategoryRender]]
