update content - 2/14 changeset 5295 (as of 5145); moved to render.h

--- a/SDL_Texture.mediawiki
+++ b/SDL_Texture.mediawiki
@@ -35,4 +35,4 @@ You can add your code example here
 :[[SDL_UpdateTexture]]
 
 ----
-[[CategoryStruct]], !CategoryVideo
+[[CategoryStruct]], Category<code></code>Render
