update content - adjust title

--- a/CategoryVideo.mediawiki
+++ b/CategoryVideo.mediawiki
@@ -4,7 +4,7 @@
 <!-- language en -->
 '''DRAFT'''
 
-= Display Management, Window Management =
+= Display and Window Management =
 
 '''Include File(s):''' [http://hg.libsdl.org/SDL/file/default/include/SDL_video.h SDL_video.h]
 
