--- a/SDL_RendererInfo.mediawiki
+++ b/SDL_RendererInfo.mediawiki
@@ -73,4 +73,4 @@ You can add your code example here
 :[[SDL_RenderCopy]]
 
 ----
-[[CategoryStruct]], [[CategoryVideo]]
+[[CategoryStruct]], [[CategoryRender]]
