--- a/SDL_CreateRenderer.mediawiki
+++ b/SDL_CreateRenderer.mediawiki
@@ -43,4 +43,4 @@ You can add your code example here
 :[[SDL_SelectRenderer]]
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
