update content - 2/14 changeset 5295 (as of 5145); moved to render.h

--- a/SDL_GetNumRenderDrivers.mediawiki
+++ b/SDL_GetNumRenderDrivers.mediawiki
@@ -27,4 +27,4 @@ A render driver is a set of code that handles rendering and texture management o
 :[[SDL_SelectVideoDisplay]]
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
