--- a/SDL_GetRendererInfo.mediawiki
+++ b/SDL_GetRendererInfo.mediawiki
@@ -32,4 +32,4 @@ You can add your code example here
 :[[SDL_CreateRenderer]]
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
