update content - 2/14 changeset 5295 (as of 5145); moved to render.h

--- a/SDL_CreateTexture.mediawiki
+++ b/SDL_CreateTexture.mediawiki
@@ -49,4 +49,4 @@ You can add your code example here
 :[[SDL_SelectRenderer]]
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
