update content - 2/14 changeset 5295 (as of 5145); moved to render.h

--- a/SDL_CreateTextureFromSurface.mediawiki
+++ b/SDL_CreateTextureFromSurface.mediawiki
@@ -39,4 +39,4 @@ The surface is not modified or freed by this function.
 :[[SDL_QueryTexture]]
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
