--- a/SDL_QueryTexture.mediawiki
+++ b/SDL_QueryTexture.mediawiki
@@ -50,4 +50,4 @@ You can add your code example here
 :[[SDL_QueryTexturePixels]]
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
