update content - 2/14 changeset 5295 (as of 5145); moved to render.h

--- a/SDL_SetTextureColorMod.mediawiki
+++ b/SDL_SetTextureColorMod.mediawiki
@@ -49,4 +49,4 @@ You can call [[SDL_GetRendererInfo]]() to fill in an [[SDL_RendererInfo]] struct
 :[[SDL_SetTextureAlphaMod]]
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
