--- a/SDL_SetTextureBlendMode.mediawiki
+++ b/SDL_SetTextureBlendMode.mediawiki
@@ -41,4 +41,4 @@ You can call [[SDL_GetRendererInfo]]() to fill in an [[SDL_RendererInfo]] struct
 :[[SDL_RenderCopy]]
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
