--- a/SDL_SetTextureAlphaMod.mediawiki
+++ b/SDL_SetTextureAlphaMod.mediawiki
@@ -41,4 +41,4 @@ You can call [[SDL_GetRendererInfo]]() to fill in an [[SDL_RendererInfo]] struct
 :[[SDL_SetTextureColorMod]]
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
