update content - 2/14 changeset 5295 (as of 5145); moved to render.h

--- a/SDL_GetTextureAlphaMod.mediawiki
+++ b/SDL_GetTextureAlphaMod.mediawiki
@@ -36,4 +36,4 @@ You can add your code example here
 :[[SDL_SetTextureAlphaMod]]
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
