update content - 2/14 changeset 5295 (as of 5145); moved to render.h

--- a/SDL_UpdateTexture.mediawiki
+++ b/SDL_UpdateTexture.mediawiki
@@ -46,4 +46,4 @@ This function will work with streaming textures, but for optimization reasons yo
 :[[SDL_UnlockTexture]]
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
