update content - 2/14 changeset 5295 (as of 5145); moved to render.h

--- a/SDL_LockTexture.mediawiki
+++ b/SDL_LockTexture.mediawiki
@@ -48,4 +48,4 @@ If you don't want to mark the entire area dirty you can pass 0 for '''markDirty'
 :[[SDL_UnlockTexture]]
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
