update content - 2/14 changeset 5295 (as of 5145); moved to render.h

--- a/SDL_SetRenderDrawColor.mediawiki
+++ b/SDL_SetRenderDrawColor.mediawiki
@@ -52,4 +52,4 @@ You can add your code example here
 :[[SDL_RenderFillRects]]
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
