--- a/SDL_GetRenderDrawBlendMode.mediawiki
+++ b/SDL_GetRenderDrawBlendMode.mediawiki
@@ -31,4 +31,4 @@ You can add your code example here
 :[[SDL_SetRenderDrawBlendMode]]
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
