--- a/SDL_GetRenderDrawColor.mediawiki
+++ b/SDL_GetRenderDrawColor.mediawiki
@@ -43,4 +43,4 @@ You can add your code example here
 :[[SDL_SetRenderDrawColor]]
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
