--- a/SDL_RenderClear.mediawiki
+++ b/SDL_RenderClear.mediawiki
@@ -59,4 +59,4 @@ int main(int argc, char** argv)
 :[[SDL_SetRenderDrawColor]]
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
