--- a/SDL_RenderDrawLine.mediawiki
+++ b/SDL_RenderDrawLine.mediawiki
@@ -52,4 +52,4 @@ You can add your code example here
 :[[SDL_SetRenderDrawColor]]
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
