--- a/SDL_RenderDrawLines.mediawiki
+++ b/SDL_RenderDrawLines.mediawiki
@@ -44,4 +44,4 @@ You can add your code example here
 :[[SDL_SetRenderDrawColor]]
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
