update content - 2/14 changeset 5295 (as of 5145); moved to render.h

--- a/SDL_RenderFillRects.mediawiki
+++ b/SDL_RenderFillRects.mediawiki
@@ -42,4 +42,4 @@ You can add your code example here
 :[[SDL_RenderPresent]]
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
