update content - 2/14 changeset 5295 (as of 5145); moved to render.h

--- a/SDL_RenderCopy.mediawiki
+++ b/SDL_RenderCopy.mediawiki
@@ -47,4 +47,4 @@ The texture alpha is affected based on its alpha modulation set by [[SDL_SetText
 :[[SDL_SetTextureColorMod]]
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
