update content - 2/14 changeset 5295 (as of 5145); moved to render.h

--- a/SDL_RenderPresent.mediawiki
+++ b/SDL_RenderPresent.mediawiki
@@ -30,4 +30,4 @@ void SDL_RenderPresent(void)
 :[[SDL_SetRenderDrawColor]]
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
