update content - 2/14 changeset 5295 (as of 5145); moved to render.h

--- a/SDL_RenderReadPixels.mediawiki
+++ b/SDL_RenderReadPixels.mediawiki
@@ -44,4 +44,4 @@ WARNING: This is a very slow operation, and should not be used frequently.
 
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
