update content - 2/14 changeset 5295 (as of 5145); moved to render.h

--- a/SDL_DestroyRenderer.mediawiki
+++ b/SDL_DestroyRenderer.mediawiki
@@ -28,4 +28,4 @@ You can add your code example here
 :[[SDL_CreateRenderer]]
 
 ----
-[[CategoryAPI]], [[CategoryVideo]]
+[[CategoryAPI]], [[CategoryRender]]
