--- a/CategoryVideo.mediawiki
+++ b/CategoryVideo.mediawiki
@@ -11,7 +11,7 @@
 
 == Introduction ==
 
-This category contains functions for handling display, window, and rendering actions.
+This category contains functions for handling display and window actions.
 
 == Enumerations ==
 <<FullSearch(category:CategoryEnum CategoryVideo)>>
