--- a/CategoryVersion.mediawiki
+++ b/CategoryVersion.mediawiki
@@ -21,6 +21,8 @@ These functions are used to collect or display information about the version of 
 : The version may also be reported as a 4-digit numeric value where the thousands place represents the major version, the hundreds place represents the minor version, and the tens and ones places represent the patchlevel (update version).  
  ''Example:'' The current version number is 1300
 
+SDL_revision.h must be included in your program explicitly if you want to use the SDL_REVISION constant.
+
 == Structures ==
 <<FullSearchCached(category:CategoryStruct CategoryVersion)>>
 
