--- a/SDL_AddEventWatch.mediawiki
+++ b/SDL_AddEventWatch.mediawiki
@@ -15,7 +15,7 @@ void SDL_AddEventWatch(SDL_EventFilter filter,
 == Function Parameters ==
 {|
 |'''filter'''
-|a function that gets called when an event happens; see [[#Remarks|Remarks]] for details
+|the function to call when an event happens; see [[#Remarks|Remarks]] for details
 |-
 |'''userdata'''
 |^a pointer to the event queue to watch^
