--- a/SDL_GetRendererInfo.mediawiki
+++ b/SDL_GetRendererInfo.mediawiki
@@ -2,17 +2,20 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_GetRendererInfo =
-Use this function to get information about the current rendering context.
+Use this function to get information about a rendering context.
 
 
 == Syntax ==
 ```c++
-int SDL_GetRendererInfo(SDL_RendererInfo* info)
+int SDL_GetRendererInfo(SDL_Renderer*     renderer
+                        SDL_RendererInfo* info)
 ```
 
 == Function Parameters ==
-
 {|
+|'''renderer'''
+|^the rendering context to query^
+|-
 |'''info'''
 |an [[SDL_RendererInfo]] structure filled with information about the current renderer
 |}
