--- a/SDL_SetRenderDrawColor.mediawiki
+++ b/SDL_SetRenderDrawColor.mediawiki
@@ -7,14 +7,18 @@ Use this function to set the color used for drawing operations.
 
 == Syntax ==
 ```c++
-int SDL_SetRenderDrawColor(Uint8 r,
-                           Uint8 g,
-                           Uint8 b,
-                           Uint8 a)
+int SDL_SetRenderDrawColor(SDL_Renderer* renderer,
+                           Uint8         r,
+                           Uint8         g,
+                           Uint8         b,
+                           Uint8         a)
 ```
 
 == Function Parameters ==
 {|
+|'''renderer'''
+|^the rendering context^
+|-
 |'''r'''
 |the red value used to draw on the rendering target
 |-
