--- a/SDL_GetRendererInfo.mediawiki
+++ b/SDL_GetRendererInfo.mediawiki
@@ -14,7 +14,7 @@ int SDL_GetRendererInfo(SDL_Renderer*     renderer
 == Function Parameters ==
 {|
 |'''renderer'''
-|^the rendering context to query^
+|the rendering context
 |-
 |'''info'''
 |an [[SDL_RendererInfo]] structure filled with information about the current renderer
