update content - 2/16 changeset 5318 (as of 5147)

--- a/SDL_RenderDrawPoint.mediawiki
+++ b/SDL_RenderDrawPoint.mediawiki
@@ -7,12 +7,16 @@ Use this function to draw a point on the current rendering target.
 
 == Syntax ==
 ```c++
-int SDL_RenderDrawPoint(int x, 
-                        int y)
+int SDL_RenderDrawPoint(SDL_Renderer* renderer,
+                        int           x, 
+                        int           y)
 ```
 
 == Function Parameters ==
 {|
+|'''renderer'''
+|the rendering context
+|-
 |'''x'''
 |the x coordinate of the point
 |-
