--- a/SDL_RenderDrawPoints.mediawiki
+++ b/SDL_RenderDrawPoints.mediawiki
@@ -7,12 +7,16 @@ Use this function to draw multiple points on the current rendering target.
 
 == Syntax ==
 ```c++
-int SDL_RenderDrawPoints(const SDL_Point* points,
+int SDL_RenderDrawPoints(SDL_Renderer*    renderer,
+                         const SDL_Point* points,
                          int              count)
 ```
 
 == Function Parameters ==
 {|
+|'''renderer'''
+|the rendering context
+|-
 |'''points'''
 |an array of [[SDL_Point]] structures that represent the points to draw
 |-
