--- a/SDL_RenderDrawRect.mediawiki
+++ b/SDL_RenderDrawRect.mediawiki
@@ -7,11 +7,15 @@ Use this function to draw a rectangle on the current rendering target.
 
 == Syntax ==
 ```c++
-int SDL_RenderDrawRect(const SDL_Rect* rect)
+int SDL_RenderDrawRect(SDL_Renderer*   renderer,
+                       const SDL_Rect* rect)
 ```
 
 == Function Parameters ==
 {|
+|'''renderer'''
+|the rendering context
+|-
 |'''rect'''
 |an [[SDL_Rect]] structure representing the rectangle to draw, or NULL to outline the entire rendering target
 |}
