update content - 2/16 changeset 5318 (as of 5147)

--- a/SDL_RenderFillRects.mediawiki
+++ b/SDL_RenderFillRects.mediawiki
@@ -7,12 +7,16 @@ Use this function to fill some number of rectangles on the current rendering tar
 
 == Syntax ==
 ```c++
-int SDL_RenderFillRects(const SDL_Rect** rect,
+int SDL_RenderFillRects(SDL_Renderer*    renderer,
+                        const SDL_Rect** rect,
                         int              count)
 ```
 
 == Function Parameters ==
 {|
+|'''renderer'''
+|the rendering context
+|-
 |'''rect'''
 |an array of [[SDL_Rect]] structures representing areas to fill
 |-
