--- a/SDL_GetRevision.mediawiki
+++ b/SDL_GetRevision.mediawiki
@@ -11,7 +11,7 @@ const char* SDL_GetRevision(void)
 ```
 
 == Return Value ==
-Returns an arbitrary string (a hash value), uniquely identifying the exact revision of the SDL library in use.
+Returns an arbitrary string (a hash value), uniquely identifying the exact revision of the SDL library in use.  (''Example'':  ```hg-5344:94189aa89b54```)
 
 == Code Examples ==
 ```c++
@@ -19,7 +19,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-This value is only useful in comparing against other revisions, it is NOT an incrementing number.
+This value is the revision of the code you are linked with and may be different from the code you are compiling with.  It is only useful in comparing against other revisions, it is NOT an incrementing number.
 
 == Related Functions ==
 :[[SDL_GetVersion]]
