--- a/SDL_REVISION.mediawiki
+++ b/SDL_REVISION.mediawiki
@@ -13,6 +13,7 @@ You can add your code example here
 
 == Remarks ==
 SDL_REVISION is a string including sequential revision number that is incremented with each commit, and a hash of the last code change.
+: ''Example'':  ```hg-5344:94189aa89b54```
 
 SDL_revision.h must be included in your program explicitly if you want to use the SDL_REVISION constant.
 
