--- a/SDL_REVISION.mediawiki
+++ b/SDL_REVISION.mediawiki
@@ -12,8 +12,10 @@ You can add your code example here
 ```
 
 == Remarks ==
-SDL_REVISION is a string including sequential revision number that is incremented with each commit, and a hash of the last code change.
+<!-- #The following is included on SDL_GetRevision.  Any changes between these comments will be reflected on those pages.  Please use caution when editing.  Start Include here. -->
+The revision is a string including sequential revision number that is incremented with each commit, and a hash of the last code change.
 : ''Example'':  ```hg-5344:94189aa89b54```
+<!-- #End Include here -->
 
 SDL_revision.h must be included in your program explicitly if you want to use the SDL_REVISION constant.
 
