--- a/FAQLinux.mediawiki
+++ b/FAQLinux.mediawiki
@@ -2,7 +2,9 @@
 
 
 == What is supported? ==
-SDL supports all known Linux hardware with GNU libc and kernel version 2.0 or newer.
+SDL supports all known Linux hardware with GNU libc and kernel version 2.6 or newer.
+
+For the latest information see http://hg.libsdl.org/SDL/file/default/README.Platforms
 
 == How do I add SDL to my project? ==
 The short answer is use the output of the command "sdl-config --cflags --libs"
