--- a/FAQiOS.mediawiki
+++ b/FAQiOS.mediawiki
@@ -4,7 +4,7 @@
 == Using SDL ==
 === General ===
 ==== What is supported? ====
-SDL supports iOS 3.2+
+SDL supports iOS 3.1.3 or newer.
 
 For the latest information see http://hg.libsdl.org/SDL/file/default/README.Platforms
 
